basic dialoge complete

--- a/engine.cfg
+++ b/engine.cfg
@@ -4,9 +4,14 @@ name="hope4haiti"
 main_scene="res://world.tscn"
 icon="res://icon.png"
 
+[display]
+
+width=800
+height=600
+
 [editor_plugins]
 
-enabled=["vnen.tiled_importer"]
+enabled=["SMRT", "vnen.tiled_importer"]
 
 [input]
 
