more menu functionality

--- a/engine.cfg
+++ b/engine.cfg
@@ -4,6 +4,10 @@ name="hope4haiti"
 main_scene="res://world.tscn"
 icon="res://icon.png"
 
+[autoload]
+
+singleton="*res://singleton.gd"
+
 [display]
 
 width=800
