start up screen added

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="hope4haiti"
-main_scene="res://world.tscn"
+main_scene="res://startUp.tscn"
 icon="res://icon.png"
 
 [autoload]
