--- a/engine.cfg
+++ b/engine.cfg
@@ -15,7 +15,7 @@ height=600
 
 [editor_plugins]
 
-enabled=["SMRT", "vnen.tiled_importer"]
+enabled=["GodotTIE", "vnen.tiled_importer"]
 
 [input]
 
