--- a/gamesrc/engine.cfg
+++ b/gamesrc/engine.cfg
@@ -19,5 +19,10 @@ enabled=["GodotTIE", "vnen.tiled_importer"]
 
 [input]
 
+ui_left=[key(Left), jbutton(0, 14), key(A)]
+ui_right=[key(Right), jbutton(0, 15), key(D)]
+ui_up=[key(Up), jbutton(0, 12), key(W)]
+ui_down=[key(Down), jbutton(0, 13), key(S)]
+ui_run=[key(Shift)]
 ui_menu=[key(Tab)]
 ui_interact=[key(Space)]
