fixed windwos sizing on Endless OS

--- a/gamesrc/engine.cfg
+++ b/gamesrc/engine.cfg
@@ -1,6 +1,6 @@
 [application]
 
-name="hope4haiti"
+name="Les Aventures de Marie-Thérèse"
 main_scene="res://screens/main_menu/startUp.tscn"
 icon="res://icon.png"
 
@@ -10,6 +10,9 @@ singleton="*res://singleton.gd"
 
 [display]
 
+borderless_window=true
+stretch_mode="2d"
+stretch_aspect="keep"
 width=800
 height=600
 
